# mbuster_to_fireflyimport

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  csvexport.py  default_rules.json  diagnose.py  firefly.py  history.py  main.py  models.py  parser.py  rules.py  transform.py
app/firefly/: __init__.py  client.py  mapper.py
app/parsers/: __init__.py  base.py  cospend_json.py  moneybuster_csv.py
app/static/: .gitkeep
app/templates/: base.html  index.html  preview.html  result.html  rules.html
tests/: conftest.py  test_app.py  test_config.py  test_firefly.py  test_history.py  test_mapper.py  test_parser.py  test_parsers.py  test_transform.py
tests/fixtures/: bills_de.csv  bills_en.csv  bills_real_cospend.csv  cospend.json  stats_de.csv
